# cardre

./: .artifact-read-baseline.json  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DataAudit.py  FeatCreation.py  FineClassing.py  Makefile  PHASES.md  README.md  SECURITY.md  coarseClassing.py  common_imports.py  conftest.py  dataclean.py  importCSV.py  main.py  mypy.ini  pyproject.toml  test_FeatCreation.py  varClustering.py  warden.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  warden.yml
cardre/: __init__.py  _version.py  artifacts.py  audit.py  branch_step_resolver.py  cancellation.py  capabilities.py  config.py  errors.py  evidence.py  evidence_locator.py  evidence_resolver.py  executor.py  node_parameters.py  nodes.py  pathway.py  pipeline.py  registry.py  run_lifecycle.py  staleness.py  step_graph.py  step_id.py  store.py  store_schema.py  topology.py
cardre/_evidence/: __init__.py  kinds.py  models.py  profiles.py  reader.py  schemas.py  summaries.py
cardre/adapters/: __init__.py
cardre/api/: __init__.py  _app_instance.py  app.py  dependencies.py  errors.py  mappers.py  schemas.py
cardre/application/: __init__.py
cardre/bootstrap/: __init__.py  build_app.py  container.py  node_catalogue.py  settings.py
cardre/domain/: __init__.py  artifacts.py  diagnostics.py  errors.py  evidence.py  manifest.py  manual_binning.py  plan.py  project.py  run.py  step.py
cardre/engine/: __init__.py
cardre/execution/: __init__.py  action_plan.py  action_planner.py  context.py  dispatcher.py  executor.py  failure_classification.py  fingerprints.py  run_lifecycle.py  run_step_writer.py  step_graph.py  step_runner.py  topology.py  validation.py  worker.py
cardre/modeling/: __init__.py  adapters.py  builders.py  families.py  schema.py  serialization.py  target.py
cardre/nodes/: __init__.py  _bin_mask.py  _classifier_base.py  _dataset_quality.py  _training_utils.py  boosting.py  build.py  calibrate.py  contracts.py  ensembles.py  explainability.py  fairness.py  feature_selection.py  ml_models.py  parameters.py  prep.py  registry.py  reject_inference.py  tuning.py  validate.py
cardre/readiness/: __init__.py  check.py  dto.py  limitation_codes.py  manual_binning.py  step_requirements.py
cardre/reporting/: __init__.py  _resolve.py  collector.py  evidence_contract.py  evidence_resolver.py  limitation_codes.py  readiness.py  renderer_html.py  schema.py  types.py
cardre/services/: __init__.py  artifact_service.py  branch_evidence.py  branch_graph.py  branch_service.py  branch_validator.py  branch_writer.py  champion_service.py  comparison_service.py  evidence_policy.py  evidence_resolver.py  export_listing.py  export_service.py  import_service.py  manual_binning_service.py  migration_service.py  plan_dto.py  plan_mutation_service.py  plan_service.py  project_registry.py  project_resolver.py  report_generation_service.py  report_service.py  run_coordinator.py  run_orchestrator.py  run_service.py  run_worker.py  staleness_service.py  step_resolution_service.py  step_resolver.py  step_topology.py  workflow_guidance_service.py
cardre/store/: __init__.py  _base.py  _locked_cursor.py  _schema_version.py  artifact_repo.py  branch_repo.py  champion_repo.py  comparison_repo.py  db.py  evidence_repo.py  manual_binning_repo.py  plan_repo.py  run_repo.py  (+6 more)
docs/: README.md  credit-scoring-book-research.md  credit-scoring-repos-research.md  launch-mode.md  troubleshooting.md
frontend/: .prettierignore  _test_msw2.mjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src-tauri/tests/: sidecar_resolution.rs
scripts/: audit_artifact_reads.py  audit_quality.py  build-sidecar.sh  check-doc-references.py  check-line-counts.py  check-sidecar-naming.py  check_doc_references.py  generate-openapi-types.py  pr-gate.sh  scan-direct-artifact-reads.py  v2-phase-check.sh
sidecar/: __init__.py  __main__.py  dependencies.py  error_handling.py  main.py  models.py  proof_pathway.py
tests/: conftest.py  helpers.py  test_acceptance_generic_pipeline.py  test_action_planning.py  test_api_branches.py  test_api_champion.py  test_api_comparisons.py  test_api_contracts.py  test_api_dependencies.py  test_api_error_envelope.py  test_api_evidence.py  test_api_health.py  test_api_manual_binning.py  test_api_mappers.py  test_api_node_types_reports.py  test_api_plans.py  test_api_project_resolution.py  test_api_projects.py  test_api_run_response_shape.py  test_api_run_responses.py  test_api_runs.py  test_api_scorecard_launch_pathway.py  test_api_typed_evidence.py  test_architecture_boundaries.py  test_artifact_guardrail.py  test_artifact_lineage.py  test_artifact_repo.py  test_artifact_serialization.py  test_audit.py  test_audit_artifact_reads.py  test_audit_insert_semantics.py  test_audit_pack_launch.py  test_audit_persistence.py  test_bin_definition_lifecycle.py  test_binning.py  test_binning_node.py  test_binning_woe.py  test_boosting_fairness.py  test_boundary_imports.py  test_branch_consistency.py  (+145 more)
tests_v1/: conftest_optbinning.py  test_api_contracts.py  test_audit.py  test_boosting_fairness.py  test_branch_consistency.py  test_branch_evidence_unified.py  test_branch_service.py  test_calibrate.py  test_check_doc_references.py  test_domain_run.py  test_domain_step.py  test_ensembles.py  test_evidence_edges_and_artifacts.py  test_evidence_summaries.py  test_execution_validation.py  test_executor_characterization.py  test_executor_error_classification.py  test_frozen_scorecard_bundle.py  test_manifest.py  test_manual_binning_phase1.py  test_manual_binning_source.py  test_ml_ensembles.py  test_optbinning.py  test_readiness_consistency.py  test_readiness_package.py  test_reporting_acceptance.py  test_run_heartbeat_watchdog.py  test_run_lifecycle.py  test_run_repo_v2_changes.py  test_run_worker.py  test_scorecard_selection.py  test_store_schema_no_queryable_json.py
(+632 files in other folders)
