[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardre"
version = "0.1.0"
description = "Auditable open-source credit scorecard builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "polars",
    "pyarrow",
    "pydantic",
    "scikit-learn",
    "jinja2",
    "scipy",
]

[project.scripts]
cardre-api = "sidecar.__main__:main"

[project.optional-dependencies]
sidecar = ["fastapi", "uvicorn"]
test = ["pytest", "pytest-cov", "pytest-mock", "httpx"]
dev = ["ruff==0.15.20"]
boosting = ["xgboost", "lightgbm", "catboost"]
imbalance = ["imbalanced-learn"]
explain = ["shap"]
deep = ["torch"]
optimal-binning = ["optbinning==0.21.0"]
all-methods = ["xgboost", "lightgbm", "catboost", "imbalanced-learn", "shap", "torch", "optbinning==0.21.0"]

[tool.setuptools.packages.find]
include = ["cardre*", "sidecar*"]

[tool.setuptools.package-data]
cardre = ["reporting/templates/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*", "*Tests"]
addopts = [
    "--strict-markers",
    "--cov=cardre",
    "--cov=sidecar",
    "--cov-report=term-missing",
]
markers = [
    "optional_boosting: tests requiring xgboost/lightgbm/catboost",
    "optional_imbalance: tests requiring imbalanced-learn",
    "optional_explain: tests requiring shap",
    "optional_binning: tests requiring optbinning",
    "optional_deep: tests requiring torch",
    "slow: tests that take longer to run",
    "api: sidecar API integration tests",
    "e2e: end-to-end acceptance tests",
    "regression: safety-rail / canary tests",
    "unit: unit tests",
    "integration: integration tests",
    "governance: tests requiring CARDRE_GOVERNANCE=1 (branch/comparison/champion routes and store tables)",
]
