[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cardre"
version = "0.2.0"
description = "Auditable open-source credit scorecard builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.5",
    "polars",
    "pyarrow",
    "pydantic",
    "scikit-learn",
    "jinja2",
    "scipy",
]

[project.scripts]
cardre-api = "sidecar.__main__:main"

[project.optional-dependencies]
sidecar = ["fastapi", "uvicorn"]
test = ["pytest", "pytest-cov", "pytest-mock", "httpx"]
dev = ["ruff==0.15.22", "mypy", "import-linter>=2.0"]
boosting = ["xgboost", "lightgbm", "catboost"]
imbalance = ["imbalanced-learn"]
explain = ["shap"]
deep = ["torch"]
optimal-binning = ["optbinning==0.21.0"]
all-methods = ["xgboost", "lightgbm", "catboost", "imbalanced-learn", "shap", "torch", "optbinning==0.21.0"]

[tool.setuptools.packages.find]
include = ["cardre*", "sidecar*"]

[tool.setuptools.package-data]
cardre = ["reporting/templates/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["F", "W", "E", "I", "B", "C4", "UP", "SIM"]
ignore = ["SIM102", "SIM116", "E501"]

[tool.ruff.lint.per-file-ignores]
"cardre/api/**" = ["B008"]
"cardre/_evidence/adapters/__init__.py" = ["E402"]
"tests/**" = ["ANN001", "ANN101", "ANN201", "ANN202", "S101", "PLR2004", "D100", "D101", "D102", "D103", "D107", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["cardre", "sidecar"]

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "pyarrow.*",
    "sklearn.*",
    "scipy.*",
    "joblib.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "imblearn.*",
    "shap.*",
    "torch.*",
    "optbinning.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = ["Test*", "*Tests"]
addopts = [
    "--strict-markers",
    "--cov=cardre",
    "--cov=sidecar",
    "--cov-report=term-missing",
]
markers = [
    "optional_boosting: tests requiring xgboost/lightgbm/catboost",
    "optional_imbalance: tests requiring imbalanced-learn",
    "optional_explain: tests requiring shap",
    "optional_binning: tests requiring optbinning",
    "optional_deep: tests requiring torch",
    "slow: tests that take longer to run",
    "api: sidecar API integration tests",
    "e2e: end-to-end acceptance tests",
    "regression: safety-rail / canary tests",
    "unit: unit tests",
    "integration: integration tests",
    "governance: tests requiring CARDRE_GOVERNANCE=1 (branch/comparison/champion routes and store tables)",
]

[tool.importlinter]
root_packages = ["cardre"]

[[tool.importlinter.contracts]]
name = "Domain must not import internal packages"
type = "forbidden"
source_modules = ["cardre.domain"]
forbidden_modules = [
    "cardre.application",
    "cardre.nodes",
    "cardre.adapters",
    "cardre.api",
    "cardre.bootstrap",
]

[[tool.importlinter.contracts]]
name = "Application must not import adapters, api, or bootstrap"
type = "forbidden"
source_modules = ["cardre.application"]
forbidden_modules = [
    "cardre.adapters",
    "cardre.api",
    "cardre.bootstrap",
]
ignore_imports = [
    "cardre.application.execution.input_collection -> cardre.adapters.evidence.reader",
    "cardre.application.execution.input_collection -> cardre.execution.context",
    "cardre.application.reporting.generate_report -> cardre.reporting.collector",
    "cardre.application.reporting.export_audit_pack -> cardre.reporting.types",
    "cardre.application.reporting.readiness -> cardre.reporting.types",
    "cardre.application.reporting.schema -> cardre.reporting.types",
    "cardre.application.reporting.readiness -> cardre.branch_step_resolver",


]

[[tool.importlinter.contracts]]
name = "Nodes must not import application, adapters, api, or bootstrap"
type = "forbidden"
source_modules = ["cardre.nodes"]
forbidden_modules = [
    "cardre.application",
    "cardre.adapters",
    "cardre.api",
    "cardre.bootstrap",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "Adapters must not import api, bootstrap, or nodes"
type = "forbidden"
source_modules = ["cardre.adapters"]
forbidden_modules = [
    "cardre.api",
    "cardre.bootstrap",
    "cardre.nodes",
]

[[tool.importlinter.contracts]]
name = "API must not import adapters or nodes"
type = "forbidden"
source_modules = ["cardre.api"]
forbidden_modules = [
    "cardre.adapters",
    "cardre.nodes",
]
allow_indirect_imports = true

[tool.importlinter.independent_modules]
modules = [
    "cardre._version",
    "cardre._evidence",
    "cardre.artifacts",
    "cardre.branch_step_resolver",
    "cardre.capabilities",
    "cardre.config",
    "cardre.engine",
    "cardre.evidence_locator",
    "cardre.modeling",
    "cardre.node_parameters",
    "cardre.readiness",
    "cardre.reporting",
    "cardre.services",
    "cardre.store",
    "cardre.workflows",
    "sidecar",
]
