[package]
name = "cardre"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
ctrlc = "3"
which = "8"

[dev-dependencies]
tempfile = "3"
